fix the paragraph alignment

--- a/style.css
+++ b/style.css
@@ -2,3 +2,7 @@ section {
   margin-top: -7rem;
   padding-top: 5rem;
 }
+
+.text-justify p {
+  text-align: justify;
+}
